--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="208dp"
+            android:layout_height="370dp"
+            android:layout_gravity="left|top"
+            android:text="식당" />
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="208dp"
+            android:layout_height="370dp"
+            android:layout_gravity="right|top"
+            android:text="사진" />
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="208dp"
+            android:layout_height="370dp"
+            android:layout_gravity="bottom|left"
+            android:text="주문 내역" />
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="208dp"
+            android:layout_height="370dp"
+            android:layout_gravity="bottom|right"
+            android:text="MY" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fab"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="77dp"
+            android:layout_height="88dp"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 </LinearLayout>
