--- a/app/src/main/res/layout/activity_res_list.xml
+++ b/app/src/main/res/layout/activity_res_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#ED6868"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -16,9 +16,6 @@
         android:inputType="textPersonName"
         android:text="검색" />
 
-    <androidx.constraintlayout.helper.widget.Layer
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/button2"
@@ -31,18 +28,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"></LinearLayout>
-
-    <androidx.constraintlayout.helper.widget.Layer
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="95dp"
         android:layout_marginTop="20sp"
         android:orientation="horizontal">
 
