--- a/app/src/main/res/drawable/hewwongaip.xml
+++ b/app/src/main/res/drawable/hewwongaip.xml
@@ -14,5 +14,5 @@
         android:left="2dp"
         android:right="2dp"
         android:top="2dp" />
-    <solid android:color="#ED6868" />
+    <solid android:color="#ffffff" />
 </shape>
