--- a/app/src/main/res/layout/activity_hwe_won_gaip.xml
+++ b/app/src/main/res/layout/activity_hwe_won_gaip.xml
@@ -5,26 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#ED6868"
+    android:gravity="center"
     tools:context=".hwe_won_gaip">
-
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="268dp"
+        android:layout_height="125dp"
+        android:fontFamily="@font/notosansbold"
+        android:text="Let's Eat"
+        android:textColor="#FFFFFF"
+        android:textSize="50sp"
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.706"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.47" />
     <EditText
         android:layout_width="254dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
         android:hint="아이디"
-        android:textColor="#000000" />
+        android:background="@drawable/hewwongaip"
+        android:layout_margin="10dp"
+        android:textColorHint="#000000"/>
     <EditText
         android:layout_width="254dp"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
+        android:textColorHint="#000000"
+        android:background="@drawable/hewwongaip"
         android:hint="비밀번호"/>
     <EditText
         android:layout_width="254dp"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
+        android:textColorHint="#000000"
+        android:background="@drawable/hewwongaip"
         android:hint="이름"/>
     <RadioGroup
         android:layout_width="wrap_content"
@@ -44,13 +65,30 @@
     <EditText
         android:layout_width="254dp"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:background="@drawable/hewwongaip"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
         android:hint="생년월일(yyMMdd)"/>
     <EditText
         android:layout_width="254dp"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:background="@drawable/hewwongaip"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
         android:hint="전화번호(-생략)"/>
+    <Button
+        android:layout_width="254dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center"
+        android:background="#000000"
+        android:layout_margin="10dp"
+        android:text="확인"/>
+    <Button
+        android:layout_width="254dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center"
+        android:background="#787876"
+        android:text="뒤로" />
 </LinearLayout>
