메뉴 RecyclerView 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:textSize="20sp"
             android:text="사진" />
         <Button
-            android:id="@+id/btnJumun"
+            android:id="@+id/btnOrder"
             android:layout_width="208dp"
             android:layout_height="370dp"
             android:background="@drawable/btn"
