--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="#ED6868"
     android:gravity="center"
-    tools:context=".RegisterActivity">
+    tools:context=".login.RegisterActivity">
     <TextView
         android:id="@+id/title"
         android:layout_width="268dp"
