--- a/app/src/main/res/layout/activity_restaurant_info.xml
+++ b/app/src/main/res/layout/activity_restaurant_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ED6868"
     android:orientation="vertical"
-    tools:context=".restaurant_info">
+    tools:context=".restaurant.restaurant_info">
 
     <ScrollView
         android:layout_width="match_parent"
