--- a/app/src/main/res/layout/activity_my_tab.xml
+++ b/app/src/main/res/layout/activity_my_tab.xml
@@ -41,7 +41,7 @@
             android:textSize="24sp" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/information_fix_button"
             android:layout_width="wrap_content"
             android:layout_height="81dp"
             android:background="#ED6868"
