--- a/app/src/main/res/layout/menu_recycle.xml
+++ b/app/src/main/res/layout/menu_recycle.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@drawable/splash_drawable"
+    android:background="@drawable/gradient"
     android:gravity="center"
     tools:context=".menu_sample">
 
@@ -13,6 +13,7 @@
         android:id="@+id/image"
         android:layout_width="235dp"
         android:layout_height="match_parent"
+        android:layout_marginLeft="3dp"
         android:layout_weight="0.3"
         android:src="@drawable/menuimg1" />
 
@@ -20,7 +21,7 @@
         android:layout_width="339dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@drawable/splash_drawable"
+        android:background="@drawable/gradient"
         android:orientation="vertical"
         tools:context=".menu_sample">
 
