--- a/app/src/main/res/layout/mytab_information_fix.xml
+++ b/app/src/main/res/layout/mytab_information_fix.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".information_fix">
+    tools:context=".mytab.information_fix">
 
     <TextView
         android:id="@+id/textView17"
