주문 내역 / 마이 / 사진 탭 작업중

--- a/app/src/main/res/layout/order_main.xml
+++ b/app/src/main/res/layout/order_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".OrderActivity">
+    tools:context=".order.OrderActivity">
     <com.google.android.material.tabs.TabLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
