--- a/app/src/main/res/layout/fragment_order2.xml
+++ b/app/src/main/res/layout/fragment_order2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment_order2">
+    tools:context=".order.fragment_order2">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
