--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -55,7 +55,7 @@
         app:layout_constraintVertical_bias="0.372" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/review_button"
         android:layout_width="338dp"
         android:layout_height="49dp"
         android:text="로그인"
