--- a/app/src/main/res/layout/mytab_waiting.xml
+++ b/app/src/main/res/layout/mytab_waiting.xml
@@ -89,7 +89,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/res_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -123,7 +123,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/res_place"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -133,7 +133,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/res_parking"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
