--- a/app/src/main/res/layout/order_recycle.xml
+++ b/app/src/main/res/layout/order_recycle.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -79,10 +80,11 @@
                     android:id="@+id/btnReview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="리뷰하기"
                     android:background="@color/design_default_color_secondary"
+                    android:text="리뷰하기"
                     android:textColor="@android:color/white"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    tools:ignore="TextContrastCheck" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
