사진 탭 작업완료

--- a/app/src/main/res/layout/res_info_activity.xml
+++ b/app/src/main/res/layout/res_info_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#ED6868"
     android:orientation="vertical"
-    tools:context=".restaurant.restaurant_info">
+    tools:context=".restaurant.info.RestInfoMain">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
