--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
                     android:layout_height="95dp"
                     android:layout_gravity="center"
                     android:background="@drawable/circle_design"
+                    android:fontFamily="@font/notosansbold"
                     android:text="QR"
                     android:textColor="#000000"
                     android:textSize="20sp" />
@@ -78,8 +79,8 @@
                         android:layout_column="0"
                         android:background="@drawable/main_icon1_border"
                         android:drawableTop="@drawable/restaurant"
-                        android:fontFamily="@font/cookie"
-                        android:padding="20dp"
+                        android:fontFamily="@font/notosansbold"
+                        android:padding="30dp"
                         android:text="식당"
                         android:textColor="#000000"
                         android:textSize="20sp" />
@@ -92,8 +93,8 @@
                         android:layout_column="1"
                         android:background="@drawable/main_icon2_border"
                         android:drawableTop="@drawable/food"
-                        android:fontFamily="@font/cookie"
-                        android:padding="20dp"
+                        android:fontFamily="@font/notosansbold"
+                        android:padding="30dp"
                         android:text="사진"
                         android:textColor="#000000"
                         android:textSize="20sp" />
@@ -106,9 +107,8 @@
                         android:layout_column="0"
                         android:background="@drawable/main_icon3_border"
                         android:drawableTop="@drawable/order"
-                        android:drawablePadding="10dp"
-                        android:fontFamily="@font/cookie"
-                        android:padding="20dp"
+                        android:fontFamily="@font/notosansbold"
+                        android:padding="30dp"
                         android:text="주문 내역"
                         android:textColor="#000000"
                         android:textSize="20sp" />
@@ -121,8 +121,8 @@
                         android:layout_column="1"
                         android:background="@drawable/main_icon4_border"
                         android:drawableTop="@drawable/mytab"
-                        android:fontFamily="@font/cookie"
-                        android:padding="20dp"
+                        android:fontFamily="@font/notosansbold"
+                        android:padding="30dp"
                         android:text="MY"
                         android:textColor="#000000"
                         android:textSize="20sp" />
