--- a/app/src/main/res/layout/res_list_activity.xml
+++ b/app/src/main/res/layout/res_list_activity.xml
@@ -4,83 +4,181 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ED6868"
+    android:background="#F6B0B0"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
         android:layout_height="62dp"
+        android:background="#ED6868"
         android:ems="10"
+        android:fontFamily="@font/notosansbold"
         android:inputType="textPersonName"
-        android:text="검색" />
-    <Button
-        android:id="@+id/button2"
+        android:text="식당을 검색해주세요." />
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="87dp"
-        android:background="#FFFFFF"
-        android:text="지금 인기있는 식당은?"
-        android:textColor="#000000"
-        android:textSize="24sp" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="95dp"
-        android:layout_marginTop="20sp"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="72dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/circle_design"
-            android:rotationX="0"
-            android:text="한식"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="73dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/circle_design"
-            android:text="중식"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="75dp"
-            android:layout_height="72dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/circle_design"
-            android:text="일식"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="74dp"
-            android:layout_height="69dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/circle_design"
-            android:text="혼밥"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-    </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recycler_view">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="match_parent"
+                android:layout_height="87dp"
+                android:background="#FFFFFF"
+                android:fontFamily="@font/notosansbold"
+                android:text="지금 인기있는 식당은?"
+                android:textColor="#000000"
+                android:textSize="24sp" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/rice"
+                        android:rotationX="0"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="35dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/notosansbold"
+                        android:text="한식"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button4"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/china_food"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="35dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/notosansbold"
+                        android:text="중식"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button5"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/japan_food"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="35dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/notosansbold"
+                        android:text="일식"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button6"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/oneman_food"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="35dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/notosansbold"
+                        android:text="혼밥"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_marginTop="20dp"
+                android:background="#FFFFFF"></androidx.recyclerview.widget.RecyclerView>
+        </LinearLayout>
+    </ScrollView>
+
+
 </LinearLayout>
