--- a/app/src/main/res/drawable/main_icon2_border.xml
+++ b/app/src/main/res/drawable/main_icon2_border.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:radius="10dp"/>
+        android:radius="20dp"/>
     <stroke
         android:width="4sp"
-        android:color="#ED6868" />
+        android:color="#D6D5D5" />
 
     <solid android:color="#F1B3A0"/>
 </shape>
