--- a/app/src/main/res/layout/res_list_activity.xml
+++ b/app/src/main/res/layout/res_list_activity.xml
@@ -12,11 +12,13 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
         android:layout_height="62dp"
-        android:background="#ED6868"
+        android:layout_margin="20dp"
+        android:background="@drawable/res_search_design"
         android:ems="10"
         android:fontFamily="@font/notosansbold"
         android:inputType="textPersonName"
-        android:text="식당을 검색해주세요." />
+        android:text="식당을 검색해주세요."
+        android:textAlignment="center" />
 
     <ScrollView
         android:layout_width="match_parent"
