--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -50,7 +50,7 @@
         app:layout_constraintVertical_bias="0.217" />
 
     <EditText
-        android:id="@+id/editTextNumberPassword"
+        android:id="@+id/input_PW"
         android:layout_width="338dp"
         android:layout_height="49dp"
         android:background="@drawable/round_circle"
@@ -81,21 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />
-
-    <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="215dp"
-        android:layout_height="65dp"
-        android:fontFamily="@font/notosansregular"
-        android:text="모두가 즐거운"
-        android:textColor="#FFFFFF"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.103" />
+        app:layout_constraintTop_toBottomOf="@+id/input_PW" />
 
     <TextView
         android:id="@+id/title"
@@ -112,6 +98,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.14" />
 
+    <TextView
+        android:id="@+id/subtitle"
+        android:layout_width="215dp"
+        android:layout_height="65dp"
+        android:fontFamily="@font/notosansregular"
+        android:text="모두가 즐거운"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.103" />
+
     <Button
         android:id="@+id/login_button"
         android:layout_width="338dp"
@@ -123,11 +123,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
+        app:layout_constraintTop_toBottomOf="@+id/input_PW"
         app:layout_constraintVertical_bias="0.394" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/input_ID"
         android:layout_width="336dp"
         android:layout_height="49dp"
         android:background="@drawable/round_circle"
@@ -137,7 +137,7 @@
         android:paddingLeft="15dp"
         android:textColorHint="#000000"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
+        app:layout_constraintBottom_toTopOf="@+id/input_PW"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
